Fix news card height

--- a/src/scss/components/blocks/_news-card.scss
+++ b/src/scss/components/blocks/_news-card.scss
@@ -5,6 +5,7 @@
 	padding-top: 156px;
 	color: $color-black;
 	transition: color $transition-default;
+	height: 100%;
 
 	&::before {
 		position: absolute;
