--- a/css/main.css
+++ b/css/main.css
@@ -2733,7 +2733,8 @@ a {
   color: #000;
   -webkit-transition: color 0.2s ease;
   -o-transition: color 0.2s ease;
-  transition: color 0.2s ease; }
+  transition: color 0.2s ease;
+  height: 100%; }
   .news-card::before {
     position: absolute;
     z-index: -1;
