Add languages to mobile-menu

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -173,3 +173,12 @@ header.header
 							a.header__mobile-menu-child-link(href="") Преимущества
 						li.header__mobile-menu-child-elem
 							a.header__mobile-menu-child-link(href="") Наши вакансии
+				li.header__mobile-menu-elem
+					.header__mobile-menu-link-box
+						a.header__mobile-menu-link(href="#") Язык
+						+svg("menu-dropdown")(class="header__mobile-menu-dropdown")
+					ul.header__mobile-menu-child-list
+						li.header__mobile-menu-child-elem
+							a.header__mobile-menu-child-link(href="") Русский
+						li.header__mobile-menu-child-elem
+							a.header__mobile-menu-child-link(href="") Английский
