Update text block margin in section-description

--- a/src/industry-fashion.pug
+++ b/src/industry-fashion.pug
@@ -138,7 +138,7 @@ block content
 			.slider__pagination
 			button.slider__btn.slider__btn--next(aria-label="Вперед")
 				+svg("chevron-slider")(class="slider__btn-arrow")
-		p.section-description__text-block
+		p.section-description__text-block.section-description__text-block--mb
 			strong Major Terminal
 			|
 			| помогает своим клиентам в сферы красоты и люкса разрабатывать продукты и модели цепочек поставок, отвечающие растущим запросам потребителей и высоким ожиданиям от бренда. Мы предлагаем широкий ассортимент высококачественных логистических услуг в сфере красоты и люкса, от многоканального выполнения заказов до глобальных транспортных или пере упаковочных решений, адаптированных к рынкам предметов роскоши, что позволяет брендам отражать свой имидж и выполнять обязательства перед людьми и экологией в своей цепочке поставок.
