--- a/css/main.css
+++ b/css/main.css
@@ -919,6 +919,17 @@ a {
   .button-arrow:hover {
     background-color: #cdddec; }
 
+.video {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0; }
+  .video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important; }
+
 .header {
   position: relative;
   z-index: 100;
