--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -56,3 +56,8 @@ block content
 				a(href="webinar.html", target="_blank") Вебинар // + моб версия
 			li.list-arrow__elem
 				a(href="webinar2.html", target="_blank") Вебинар 2 // + моб версия
+
+	.container
+		p Видео для примера
+		.video
+			iframe(width='560', height='315', src='https://www.youtube.com/embed/QK4xl5c8w7Y', title='YouTube video player', frameborder='0', allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share', allowfullscreen)
