--- a/css/main.css
+++ b/css/main.css
@@ -610,8 +610,6 @@ a {
   .tabs2__content.active {
     visibility: visible;
     position: static; }
-  .tabs2__content-height {
-    margin-bottom: 42px; }
 
 @media (min-width: 1200px) {
   .hide-desktop {
@@ -639,6 +637,18 @@ a {
 
 .cursor-pointer {
   cursor: pointer; }
+
+.flex-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
+.mb-auto {
+  margin-bottom: auto; }
 
 /* montserrat-300 - cyrillic_latin */
 @font-face {
