Fix text block margin in service range section

--- a/src/scss/components/sections/_section-service-range.scss
+++ b/src/scss/components/sections/_section-service-range.scss
@@ -35,5 +35,14 @@
 			line-height: 24px;
 			margin-bottom: 58px;
 		}
+
+		&--mb,
+		&:last-child {
+			margin-bottom: 74px;
+
+			@media (max-width: $breakpoint-desktop) {
+				margin-bottom: 58px;
+			}
+		}
 	}
 }
