--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -77,45 +77,45 @@
 }
 
 .mb-0 {
-	margin-bottom: 0;
+	margin-bottom: 0 !important;
 }
 
 .mb-10 {
-	margin-bottom: 10px;
+	margin-bottom: 10px !important;
 }
 
 .mb-20 {
-	margin-bottom: 20px;
+	margin-bottom: 20px !important;
 }
 
 .mb-30 {
-	margin-bottom: 30px;
+	margin-bottom: 30px !important;
 }
 
 .mb-40 {
-	margin-bottom: 40px;
+	margin-bottom: 40px !important;
 }
 
 .mb-50 {
-	margin-bottom: 50px;
+	margin-bottom: 50px !important;
 }
 
 .mb-60 {
-	margin-bottom: 60px;
+	margin-bottom: 60px !important;
 }
 
 .mb-70 {
-	margin-bottom: 70px;
+	margin-bottom: 70px !important;
 }
 
 .mb-80 {
-	margin-bottom: 80px;
+	margin-bottom: 80px !important;
 }
 
 .mb-90 {
-	margin-bottom: 90px;
+	margin-bottom: 90px !important;
 }
 
 .mb-100 {
-	margin-bottom: 100px;
+	margin-bottom: 100px !important;
 }
