--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -4,7 +4,7 @@ footer.footer
 		.footer__row
 			// Nav col
 			.footer__col
-				p.footer__nav-title Индустрии
+				a.footer__nav-title(href="#") Индустрии
 				ul.footer__nav-list
 					li.footer__nav-elem
 						a.footer__nav-link.footer__nav-link--active(href="#") Fashion
@@ -27,7 +27,7 @@ footer.footer
 							img.footer__logo-list-img(src="images/common/logo-m.png", alt="Major")
 			// Nav col
 			.footer__col
-				p.footer__nav-title Услуги
+				a.footer__nav-title(href="#") Услуги
 				ul.footer__nav-list
 					li.footer__nav-elem
 						a.footer__nav-link(href="#") Ответственное хранение
@@ -45,7 +45,7 @@ footer.footer
 						a.footer__nav-link(href="#") Кросс-докинг
 			// Nav col
 			.footer__col
-				p.footer__nav-title Major Terminal
+				a.footer__nav-title(href="#") Major Terminal
 				ul.footer__nav-list.footer__nav-list--show-laptop
 					li.footer__nav-elem
 						a.footer__nav-link(href="#") О нас
@@ -81,10 +81,10 @@ footer.footer
 									+svg("telegram", true)(class="social__link-icon")
 					ul.footer__logo-list.footer__logo-list--mobile
 						li.footer__logo-list-elem
-							a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
+							a.footer__logo-list-link(href="https://mjr.ru/", target="_blank", rel="noreferrer")
 								img.footer__logo-list-img(src="images/common/logo-t.png", alt="Major")
 						li.footer__logo-list-elem
-							a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
+							a.footer__logo-list-link(href="https://major-express.ru/", target="_blank", rel="noreferrer")
 								img.footer__logo-list-img(src="images/common/logo-m.png", alt="Major")
 		// Copyright
 		.footer__copyright
