--- a/src/industry-fashion.pug
+++ b/src/industry-fashion.pug
@@ -62,39 +62,73 @@ block content
 				.section-partner__nav-row
 					ul.section-partner__link-list
 						li.section-partner__link-elem
-							a.section-partner__link.section-partner__link--active(href="#") Услуги
+							a.section-partner__link.section-partner__link--active(href='#', data-tab='1') Услуги
 						li.section-partner__link-elem
-							a.section-partner__link(href="#") Таможенный склад
+							a.section-partner__link(href='#', data-tab='2') Таможенный склад
 						li.section-partner__link-elem
-							a.section-partner__link(href="#") Предпродажная подготовка
+							a.section-partner__link(href='#', data-tab='3') Предпродажная подготовка
 						li.section-partner__link-elem
-							a.section-partner__link(href="#") Дистрибуция
-					.dropdown.dropdown--text-blue.dropdown--navigate.section-partner__dropdown
-						.dropdown__value-box
-							input.dropdown__value(type="text", value="Услуги", disabled)
-							+svg("chevron-dropdown", true)(class="dropdown__arrow")
-						ul.dropdown__options-list
-							li.dropdown__option.dropdown__option--selected(data-value="#") Услуги
-							li.dropdown__option(data-value="#") Таможенный склад
-							li.dropdown__option(data-value="#") Предпродажная подготовка
-							li.dropdown__option(data-value="#") Дистрибуция
+							a.section-partner__link(href='#', data-tab='4') Хранение
+						li.section-partner__link-elem
+							a.section-partner__link(href='#', data-tab='5') Дистрибуция
+				.dropdown.dropdown--text-blue.section-partner__dropdown
+					.dropdown__value-box
+						input.dropdown__value(type='text', value="Услуги", disabled)
+						svg.dropdown__arrow
+							use(href='#chevron-dropdown')
+					ul.dropdown__options-list
+						li.dropdown__option.dropdown__option--selected(data-tab='1', data-value='Услуги') Услуги
+						li.dropdown__option(data-tab='2', data-value='Таможенный склад') Таможенный склад
+						li.dropdown__option(data-tab='3', data-value='Предпродажная подготовка') Предпродажная подготовка
+						li.dropdown__option(data-tab='4', data-value='Хранение') Хранение
+						li.dropdown__option(data-tab='5', data-value='Дистрибуция') Дистрибуция
 				.section-partner__content.section-partner__content--with-lists
 					.section-partner__row
 						.section-partner__col.section-partner__col--content
-							.section-partner__list-arrow-block
+							.section-partner__list-arrow-block.tabs2__content.tabs2__content-height.active(data-tab='1', data-code='TABS_SERVICES')
 								ul.list-arrow.list-arrow--red-arrow
 									li.list-arrow__elem Разгрузка, приемка, контроль качества
 									li.list-arrow__elem Сортировка товаров по группам и категория
 									li.list-arrow__elem Подбор и отгрузка по FIFO, FEFO, лотам, партиям
 									li.list-arrow__elem Возвратная логистика
 								ul.list-arrow.list-arrow--red-arrow
-									li.list-arrow__elem Кросс-докинг
+									li.list-arrow__elem Разноуровневый кросс-докинг
 									li.list-arrow__elem Выбраковка
-									li.list-arrow__elem Восстановление качества
+									li.list-arrow__elem Глажка и восстановление качества
 									li.list-arrow__elem Маркировка
-							a.button.button--outline-blue.button--md.section-partner__button(href="#") Оставить заявку
+							.section-partner__list-arrow-block.tabs2__content.tabs2__content-height(data-tab='2', data-code='TABS_SKLAD')
+								ul.list-arrow.list-arrow--red-arrow
+									li.list-arrow__elem Маркировка честный знак
+									li.list-arrow__elem Собственный таможенный склад
+									li.list-arrow__elem Высокая производительность
+								ul.list-arrow.list-arrow--red-arrow
+									li.list-arrow__elem Лицензированный таможенный представитель
+									li.list-arrow__elem Сопутствующие услуги в процессе маркировки
+							.section-partner__list-arrow-block.tabs2__content.tabs2__content-height(data-tab='3', data-code='TABS_PRE_SALE')
+								ul.list-arrow.list-arrow--red-arrow
+									li.list-arrow__elem Противокражные датчики (снятие/установка)
+									li.list-arrow__elem Обрезание и крепление ярлыкодержателей
+									li.list-arrow__elem Стикеровка этикетками любых размеров и цветов
+								ul.list-arrow.list-arrow--red-arrow
+									li.list-arrow__elem Упаковка и переупаковка
+									li.list-arrow__elem Восстановление товарного вида
+									li.list-arrow__elem Отбраковка товара
+							.section-partner__list-arrow-block.tabs2__content.tabs2__content-height(data-tab='4', data-code='TABS_STORAGE')
+								ul.list-arrow.list-arrow--red-arrow
+									li.list-arrow__elem Стеллажное
+									li.list-arrow__elem Напольное
+								ul.list-arrow.list-arrow--red-arrow
+									li.list-arrow__elem Полочное
+									li.list-arrow__elem Вешальное
+							.section-partner__list-arrow-block.tabs2__content.tabs2__content-height(data-tab='5', data-code='TABS_DISTR')
+								ul.list-arrow.list-arrow--red-arrow
+									li.list-arrow__elem Подбор типа доставки (по времени, цене, значимости)
+									li.list-arrow__elem Отслеживание грузов, предварительные оповещения получателей
+								ul.list-arrow.list-arrow--red-arrow
+									li.list-arrow__elem Координация поставщиков транспорта
+							a.button.button--outline-blue.button--md.section-partner__button(href='#section-contacts') Оставить заявку
 						.section-partner__col.section-partner__col--img
-							img.section-partner__image(src="images/section-partner/img1.svg", alt)
+							img.section-partner__image(style='max-width: 382px;', src='images/section-partner/img1.svg', alt)
 	// Section Description
 	section.section-description.container
 		h2.h2.section-description__title Опции и
@@ -138,7 +172,7 @@ block content
 			.slider__pagination
 			button.slider__btn.slider__btn--next(aria-label="Вперед")
 				+svg("chevron-slider")(class="slider__btn-arrow")
-		p.section-description__text-block.section-description__text-block--mb
+		p.section-description__text-block.section-description__text-block--mb.mt-30
 			strong Major Terminal
 			|
 			| помогает своим клиентам в сферы красоты и люкса разрабатывать продукты и модели цепочек поставок, отвечающие растущим запросам потребителей и высоким ожиданиям от бренда. Мы предлагаем широкий ассортимент высококачественных логистических услуг в сфере красоты и люкса, от многоканального выполнения заказов до глобальных транспортных или пере упаковочных решений, адаптированных к рынкам предметов роскоши, что позволяет брендам отражать свой имидж и выполнять обязательства перед людьми и экологией в своей цепочке поставок.
