--- a/src/scss/components/blocks/_footer.scss
+++ b/src/scss/components/blocks/_footer.scss
@@ -33,6 +33,11 @@
 		font-size: 24px;
 		line-height: 32px;
 		color: $color-blue;
+		transition: color $transition-default;
+
+		&:hover {
+			color: $color-red;
+		}
 	}
 
 	&__nav-list {
