--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -32,10 +32,10 @@ header.header
 					ul.dropdown__options-list
 						li.dropdown__option.dropdown__option--selected(data-value="Русский")
 							img.dropdown__flag(src="images/common/flag-ru.svg", alt)
-							| Русский
+							span.dropdown__lang-text Русский
 						li.dropdown__option(data-value="English")
 							img.dropdown__flag(src="images/common/flag-en.svg", alt)
-							| English
+							span.dropdown__lang-text English
 			button.header__burger-btn(aria-label="Мобильное меню")
 				+svg("burger", true)(class="header__burger")
 				+svg("menu-close")(class="header__close")
